<resources>
    <string name="app_name">Scrabble</string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>


    <string name="PlayWord">PlayWord</string>
    <string name="ReplaceRack">ReplaceRack</string>
    <string name="Quit">Quit</string>
    <string name="Exit">Exit</string>
    <string name="Play">Play</string>
    <string name="ResumeGame">Resume Game</string>
    <string name="AdjustSetting">Adjust Setting</string>
    <string name="ViewStats">View Statistics</string>
    <string name="ViewStat">View Statistics</string>
    <string name="ViewWordBank">WordBank</string>
    <string name="Save">Save</string>
    <string name="Enter">Enter</string>
    <string name="Rack">Rack</string>
    <string name="Board">Board</string>
    <string name="Word">Word</string>
    <string name="Swap">Swap</string>
    <string name="Leave">Leave</string>
    <string name="LetterStats">LetterStats</string>
    <string name="ScoreStats">ScoreStats</string>
    <string name="TT">TT</string>
    <string name="test">test1</string>


    <string-array name="Alphabet_array">
        <item>Freq of A</item>
        <item>Freq of B</item>
        <item>Freq of C</item>
        <item>Freq of D</item>
        <item>Freq of E</item>
        <item>Freq of F</item>
        <item>Freq of G</item>
        <item>Freq of H</item>
    </string-array>

</resources>

