<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="503dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Your Score"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/Score"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0"
                android:textAlignment="center"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/Word"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/inputWord"
                android:layout_width="171dp"
                android:layout_height="81dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/Enter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="handleClick"
                android:text="@string/Enter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Board"
                android:textAlignment="center"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#4CAF50"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Board1"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Board2"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Board3"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Board4"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Rack"
                android:textAlignment="center"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3793BD"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Rack1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/R" />

                <Button
                    android:id="@+id/Rack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Rack3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Rack4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Rack5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/A" />

                <Button
                    android:id="@+id/Rack6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/C" />

                <Button
                    android:id="@+id/Rack7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/K" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Swap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleClick"
                android:text="@string/Swap" />

            <Button
                android:id="@+id/leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleClick"
                android:text="@string/Leave" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
