<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="308dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="88dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:text="UserID :"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center" />

            <Button
                android:id="@+id/EnterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleClick"
                android:text="Enter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/showWelcome"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:text="Please enter your UserID above " />
        </LinearLayout>

        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/Play"
            android:onClick="handleClick"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Settings"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/AdjustSetting"
            android:onClick="handleClick"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/ViewScoreStats"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/ViewStats"
            android:onClick="handleClick"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/Quit"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>